--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = admin
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.generate-ddl=false
